# nex-portfolio

./: .gitignore  README.md  nids_pipeline_v2.ipynb  nids_pipeline_v2_colab.ipynb  nids_v1_baseline.ipynb  v2_classical_log.txt  v2_classical_results.json
.github/workflows/: ci.yml
mlsecops-agent/: .env.example  .env.template  .gitignore  README.md  pyproject.toml
mlsecops-agent/.claude/: CLAUDE.md  README.md  settings.json
mlsecops-agent/.claude/agents/: check-author.md  implementer.md  researcher.md  reviewer.md
mlsecops-agent/.claude/commands/: eval.md  plan.md  ship.md  verify.md
mlsecops-agent/.claude/docs/: architecture.md  conventions.md
mlsecops-agent/.claude/docs/decisions/: 0001-template.md  0002-python-stack.md  0003-mvp-five-checks.md  0004-deepseek-runtime.md  0005-sandbox.md
mlsecops-agent/docs/: v1_audit_report.md  v1_audit_report.sarif  v1_supply_chain_output.txt  v2_audit_report.md  v2_audit_report.sarif
mlsecops-agent/scripts/: README.md  extract_v2_probes.py  v2_classical_baselines.py
mlsecops-agent/src/mlsecops_agent/: __init__.py  agent.py  cli.py  models.py  sandbox.py  scenarios.py
mlsecops-agent/src/mlsecops_agent/checks/: __init__.py  adversarial.py  deserialization.py  leakage.py  secrets.py  semgrep_rules.py  supply_chain.py
mlsecops-agent/src/mlsecops_agent/eval/: __init__.py  harness.py
mlsecops-agent/src/mlsecops_agent/llm/: __init__.py  provider.py  tracer.py
mlsecops-agent/src/mlsecops_agent/prompts/: __init__.py  system.md
mlsecops-agent/src/mlsecops_agent/reporting/: __init__.py  markdown.py  sarif.py
mlsecops-agent/src/mlsecops_agent/rules/: ml-hygiene.yml
mlsecops-agent/src/mlsecops_agent/storage/: __init__.py  db.py
mlsecops-agent/src/mlsecops_agent/tools/: __init__.py
mlsecops-agent/tests/: test_agent.py  test_agent_judgement.py  test_cli.py  test_eval.py  test_llm_provider.py  test_observability.py  test_reporting.py  test_sarif.py  test_scenarios.py  test_storage.py
mlsecops-agent/tests/checks/: test_adversarial.py  test_deserialization.py  test_leakage.py  test_secrets.py  test_semgrep_rules.py  test_supply_chain.py
mlsecops-agent/tests/fixtures/: EVAL_BASELINE.json  README.md
mlsecops-agent/tests/fixtures/deserialization/: negative_safe_loads.ipynb  positive_unsafe_loads.ipynb
mlsecops-agent/tests/fixtures/leakage/: negative_correct_pipeline.ipynb  positive_difficulty_proxy.ipynb  positive_fit_on_test.py  positive_smote_before_split.ipynb
mlsecops-agent/tests/fixtures/secrets/: negative_safe_secret_handling.ipynb  positive_hardcoded_secrets.ipynb  positive_leaked_in_output.ipynb
mlsecops-agent/tests/fixtures/semgrep/: negative_clean_pipeline.py  positive_fit_on_test_semgrep.py  positive_shuffle_false.py
mlsecops-agent/tests/fixtures/supply_chain/: negative_pinned_pip.ipynb  positive_unpinned_pip.ipynb
